--- a/css/version2.css
+++ b/css/version2.css
@@ -14,6 +14,7 @@ body {
     background: #333;
     margin: 0;
 
+
 }
 img {
     max-width: 100%; /* DO NOT delete or change this line */
@@ -21,18 +22,15 @@ img {
 
 article {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0rem 2rem;
 }
 
 section {
     max-width: 70%;
 }
 
-h2 {
-    text-align: center;
-}
 
 header {
     color: #fff;
@@ -73,12 +71,10 @@ footer {
 
 
 .text {
-    background: #fff;
-    color: #000;
-    padding: 1rem 5rem 1rem 5rem;
+    padding: 1rem 2rem;
     font-size: 1rem;
     line-height: 1.5rem;
-    margin-bottom: 2.5rem;
+    margin-bottom: 1rem;
     max-width: 600px;
 }
 
@@ -143,10 +139,4 @@ header a:hover {
 }
 header a:link {
     text-decoration: none;
-}
-.text a {
-    color: #0008FF;
-}
-.text a:hover {
-    color: #999;
 }
